# starter-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
pycli/: __init__.py  __main__.py  commands.py  extractors.py  fetchers.py  main.py  utilities.py
test/: test-unit.cmd
test/unit/: test_commands.py  test_fetchers.py
