[metadata]
name = pycli
version = 0.0.1
description = pycli is a template python library/cli to get you up and running quickly

[options]
packages = find:
install_requires =
    click == 8.1.3
    colorama == 0.4.5
    tomli == 2.0.1

[options.extras_require]
dev = 
    pytest == 7.1.2
    pytest-cov == 3.0.0

[options.entry_points]
console_scripts =
    pycli = pycli.main:app